tests/parser-test-files/bad-files/define-class.14.error
error: Malformed functional dependency
  --> test:4:34
   |
 4 |  (define-class (C :a :b (:a -> :b) :c))
   |                                    ^^ expected a list
